--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ['1.22', '1.23']
+        go-version: ['stable', 'oldstable']
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
