--- a/.github/workflows/go-version-update.yml
+++ b/.github/workflows/go-version-update.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -70,7 +70,7 @@ jobs:
 
       - name: Set up Go
         if: steps.compare.outputs.needs_update == 'true'
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           go-version: ${{ steps.go_version.outputs.version }}
 
@@ -91,7 +91,7 @@ jobs:
 
       - name: Create Pull Request
         if: steps.compare.outputs.needs_update == 'true'
-        uses: peter-evans/create-pull-request@v7
+        uses: peter-evans/create-pull-request@3b4c3ba8e05d12a9420e4e7084c4d2646eda1964 # v7.0.6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: |
