--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,18 +29,18 @@ jobs:
     if: github.event_name == 'pull_request'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
         with:
           fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           go-version-file: go.mod
           cache: true
 
       - name: Download PR coverage
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.2.0
         with:
           name: coverage-report
           path: ./pr-coverage
@@ -74,7 +74,7 @@ jobs:
 
       - name: Comment PR with coverage diff
         if: steps.coverage_diff.outputs.has_diff == 'true'
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const fs = require('fs');
@@ -121,7 +121,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
 
       - name: Check if PR is safe to merge
         id: check_safe
@@ -157,7 +157,7 @@ jobs:
     if: github.event_name == 'pull_request'
     steps:
       - name: Comment PR with preview URL
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const prNumber = context.issue.number;
@@ -216,7 +216,7 @@ jobs:
     steps:
       - name: Check for previous Claude attempts
         id: check_attempts
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const comments = await github.rest.issues.listComments({
@@ -239,14 +239,14 @@ jobs:
 
       - name: Checkout PR branch
         if: steps.check_attempts.outputs.skip != 'true'
-        uses: actions/checkout@v4
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Go
         if: steps.check_attempts.outputs.skip != 'true'
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           go-version-file: go.mod
           cache: true
@@ -259,7 +259,7 @@ jobs:
 
       - name: Run Claude Code
         if: steps.check_attempts.outputs.skip != 'true'
-        uses: anthropics/anthropic-code-action@v1
+        uses: anthropics/anthropic-code-action@0630ef383a451c46ccac86eb86ee7641e99c4c9a # v1.0.0
         with:
           anthropic-api-key: ${{ secrets.ANTHROPIC_API_KEY }}
           prompt: |
@@ -302,7 +302,7 @@ jobs:
 
       - name: Comment on PR
         if: always() && steps.check_attempts.outputs.skip != 'true'
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const hasChanges = '${{ steps.check_changes.outputs.has_changes }}' === 'true';
