fix: correct golangci configuration

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,4 @@
-# golangci-lint configuration for v2
+# golangci-lint configuration
 # Reference: https://golangci-lint.run/docs/configuration/file/
 
 version: "2"
@@ -105,148 +105,5 @@ linters:
     - wsl           # Too opinionated on whitespace
     - wrapcheck     # Too strict for internal packages
 
-linters-settings:
-  cyclop:
-    max-complexity: 15
-    skip-tests: true
-
-  dupl:
-    threshold: 100
-
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
-    exclude-functions:
-      - (io.Closer).Close
-      - (*database/sql.Rows).Close
-
-  errorlint:
-    errorf: true
-    asserts: true
-    comparison: true
-
-  exhaustive:
-    default-signifies-exhaustive: true
-
-  forbidigo:
-    forbid:
-      - ^print.*$
-      - 'fmt\.Print.*'
-    exclude-godoc-examples: true
-
-  funlen:
-    lines: 100
-    statements: 50
-    ignore-comments: true
-
-  goconst:
-    min-len: 3
-    min-occurrences: 3
-    ignore-tests: true
-
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - experimental
-      - opinionated
-      - performance
-      - style
-    disabled-checks:
-      - whyNoLint
-      - unnamedResult
-
-  gocyclo:
-    min-complexity: 15
-
-  godot:
-    scope: declarations
-    capital: true
-
-  govet:
-    enable-all: true
-    disable:
-      - fieldalignment
-      - shadow
-
-  mnd:
-    ignored-functions:
-      - '^math\.'
-      - '^http\.StatusText$'
-    ignored-numbers:
-      - '0'
-      - '1'
-      - '2'
-      - '100'
-      - '404'
-      - '500'
-
-  nakedret:
-    max-func-lines: 30
-
-  nestif:
-    min-complexity: 4
-
-  nolintlint:
-    allow-unused: false
-    require-explanation: true
-    require-specific: true
-
-  revive:
-    rules:
-      - name: blank-imports
-      - name: context-as-argument
-      - name: context-keys-type
-      - name: dot-imports
-      - name: error-return
-      - name: error-strings
-      - name: error-naming
-      - name: exported
-      - name: if-return
-      - name: increment-decrement
-      - name: var-naming
-      - name: var-declaration
-      - name: package-comments
-      - name: range
-      - name: receiver-naming
-      - name: time-naming
-      - name: unexported-return
-      - name: indent-error-flow
-      - name: errorf
-      - name: empty-block
-      - name: superfluous-else
-      - name: unused-parameter
-      - name: unreachable-code
-      - name: redefines-builtin-id
-
-  staticcheck:
-    checks:
-      - all
-
-  unparam:
-    check-exported: true
-
-issues:
-  max-issues-per-linter: 0
-  max-same-issues: 0
-
-  exclude-rules:
-    # Exclude some linters from running on tests files
-    - path: _test\.go
-      linters:
-        - dupl
-        - funlen
-        - gochecknoglobals
-        - goconst
-        - mnd
-        - wrapcheck
-
-    # Exclude magic number detection in test files
-    - path: _test\.go
-      text: "mnd: Magic number"
-
-  exclude-use-default: false
-  exclude-case-sensitive: false
-
 severity:
   default: error
-  case-sensitive: false
