ci: rely on explicit version instead of alias for Go

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ['stable', 'oldstable']
+        go-version: ['1.25.4', '1.24.10']  # Updated by go-version-update workflow
     steps:
       - name: Checkout code
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
