--- a/.github/workflows/go-version-update.yml
+++ b/.github/workflows/go-version-update.yml
@@ -20,28 +20,42 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get latest stable Go version
+      - name: Get latest stable and oldstable Go versions
         id: go_version
         run: |
           # Fetch all Go releases from official API
           echo "Fetching Go releases from go.dev/dl/?mode=json..."
           releases=$(curl -s 'https://go.dev/dl/?mode=json')
 
-          # Extract stable versions only and sort them
+          # Extract the two latest stable versions (stable and oldstable)
           # Filter for stable releases, extract version field, sort by version number
-          latest_version=$(echo "$releases" | jq -r '[.[] | select(.stable == true) | .version] | sort_by(split(".") | map(tonumber)) | reverse | .[0]')
+          versions=$(echo "$releases" | jq -r '[.[] | select(.stable == true) | .version] | sort_by(split(".") | map(tonumber)) | reverse | .[0:2]')
 
-          if [ -z "$latest_version" ]; then
-            echo "Error: Could not fetch latest Go version"
+          stable_version=$(echo "$versions" | jq -r '.[0]')
+          oldstable_version=$(echo "$versions" | jq -r '.[1]')
+
+          if [ -z "$stable_version" ] || [ -z "$oldstable_version" ]; then
+            echo "Error: Could not fetch Go versions"
             exit 1
           fi
 
-          # Remove 'go' prefix to get just the version number (e.g., go1.25.3 -> 1.25.3)
-          version_number="${latest_version#go}"
+          # Remove 'go' prefix to get just the version numbers
+          stable_number="${stable_version#go}"
+          oldstable_number="${oldstable_version#go}"
 
-          echo "Latest stable Go version: $version_number"
-          echo "version=$version_number" >> $GITHUB_OUTPUT
-          echo "full_version=$latest_version" >> $GITHUB_OUTPUT
+          # Get major.minor.0 versions for go.mod
+          stable_minor=$(echo "$stable_number" | cut -d. -f1,2)
+          go_mod_version="${stable_minor}.0"
+
+          echo "Latest stable Go version: $stable_number"
+          echo "Latest oldstable Go version: $oldstable_number"
+          echo "go.mod version: $go_mod_version"
+
+          echo "stable=$stable_number" >> $GITHUB_OUTPUT
+          echo "oldstable=$oldstable_number" >> $GITHUB_OUTPUT
+          echo "go_mod_version=$go_mod_version" >> $GITHUB_OUTPUT
+          echo "stable_full=$stable_version" >> $GITHUB_OUTPUT
+          echo "oldstable_full=$oldstable_version" >> $GITHUB_OUTPUT
 
       - name: Get current Go version from go.mod
         id: current_version
@@ -50,38 +64,69 @@ jobs:
           echo "Current Go version in go.mod: $current_version"
           echo "version=$current_version" >> $GITHUB_OUTPUT
 
+      - name: Get current CI Go versions
+        id: current_ci_versions
+        run: |
+          # Extract go-version array from ci.yml
+          stable_ci=$(grep -A 1 "go-version:" .github/workflows/ci.yml | grep -oP "'\K[0-9]+\.[0-9]+\.[0-9]+" | head -n1)
+          oldstable_ci=$(grep -A 1 "go-version:" .github/workflows/ci.yml | grep -oP "'\K[0-9]+\.[0-9]+\.[0-9]+" | tail -n1)
+
+          echo "Current CI versions:"
+          echo "  Stable: $stable_ci"
+          echo "  Oldstable: $oldstable_ci"
+
+          echo "stable=$stable_ci" >> $GITHUB_OUTPUT
+          echo "oldstable=$oldstable_ci" >> $GITHUB_OUTPUT
+
       - name: Compare versions
         id: compare
         run: |
-          latest="${{ steps.go_version.outputs.version }}"
-          current="${{ steps.current_version.outputs.version }}"
+          go_mod_latest="${{ steps.go_version.outputs.go_mod_version }}"
+          go_mod_current="${{ steps.current_version.outputs.version }}"
+          ci_stable_latest="${{ steps.go_version.outputs.stable }}"
+          ci_stable_current="${{ steps.current_ci_versions.outputs.stable }}"
+          ci_oldstable_latest="${{ steps.go_version.outputs.oldstable }}"
+          ci_oldstable_current="${{ steps.current_ci_versions.outputs.oldstable }}"
 
           echo "Comparing versions:"
-          echo "  Latest:  $latest"
-          echo "  Current: $current"
+          echo "  go.mod - Latest: $go_mod_latest, Current: $go_mod_current"
+          echo "  CI stable - Latest: $ci_stable_latest, Current: $ci_stable_current"
+          echo "  CI oldstable - Latest: $ci_oldstable_latest, Current: $ci_oldstable_current"
 
-          if [ "$latest" = "$current" ]; then
-            echo "Go version is already up to date!"
-            echo "needs_update=false" >> $GITHUB_OUTPUT
-          else
-            echo "New Go version available: $latest (current: $current)"
-            echo "needs_update=true" >> $GITHUB_OUTPUT
+          needs_update=false
+
+          if [ "$go_mod_latest" != "$go_mod_current" ]; then
+            echo "go.mod needs update"
+            needs_update=true
           fi
+
+          if [ "$ci_stable_latest" != "$ci_stable_current" ] || [ "$ci_oldstable_latest" != "$ci_oldstable_current" ]; then
+            echo "CI versions need update"
+            needs_update=true
+          fi
+
+          if [ "$needs_update" = "false" ]; then
+            echo "All Go versions are already up to date!"
+          else
+            echo "Go version updates available"
+          fi
+
+          echo "needs_update=$needs_update" >> $GITHUB_OUTPUT
 
       - name: Set up Go
         if: steps.compare.outputs.needs_update == 'true'
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
-          go-version: ${{ steps.go_version.outputs.version }}
+          go-version: ${{ steps.go_version.outputs.stable }}
 
       - name: Update go.mod
         if: steps.compare.outputs.needs_update == 'true'
         run: |
-          latest="${{ steps.go_version.outputs.version }}"
-          echo "Updating go.mod to Go $latest..."
+          go_mod_version="${{ steps.go_version.outputs.go_mod_version }}"
+          echo "Updating go.mod to Go $go_mod_version..."
 
           # Update the go directive in go.mod
-          sed -i "s/^go .*/go $latest/" go.mod
+          sed -i "s/^go .*/go $go_mod_version/" go.mod
 
           # Run go mod tidy to ensure go.sum is updated
           go mod tidy
@@ -89,49 +134,73 @@ jobs:
           echo "go.mod updated successfully"
           cat go.mod
 
+      - name: Update ci.yml with new Go versions
+        if: steps.compare.outputs.needs_update == 'true'
+        run: |
+          stable="${{ steps.go_version.outputs.stable }}"
+          oldstable="${{ steps.go_version.outputs.oldstable }}"
+
+          echo "Updating .github/workflows/ci.yml with:"
+          echo "  Stable: $stable"
+          echo "  Oldstable: $oldstable"
+
+          # Update the go-version matrix in ci.yml
+          sed -i "s/go-version: \[.*\]  # Updated by go-version-update workflow/go-version: ['$stable', '$oldstable']  # Updated by go-version-update workflow/" .github/workflows/ci.yml
+
+          echo "ci.yml updated successfully"
+          grep -A 1 "go-version:" .github/workflows/ci.yml
+
       - name: Create Pull Request
         if: steps.compare.outputs.needs_update == 'true'
         uses: peter-evans/create-pull-request@3b4c3ba8e05d12a9420e4e7084c4d2646eda1964 # v7.0.6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: |
-            chore: update Go version to ${{ steps.go_version.outputs.version }}
+            chore: update Go versions (stable: ${{ steps.go_version.outputs.stable }}, oldstable: ${{ steps.go_version.outputs.oldstable }})
 
-            Automated update to the latest stable Go release.
-
-            - Previous version: ${{ steps.current_version.outputs.version }}
-            - New version: ${{ steps.go_version.outputs.version }}
+            Automated update to the latest stable Go releases.
 
             Changes:
-            - Updated go.mod to use Go ${{ steps.go_version.outputs.version }}
+            - Updated go.mod to use Go ${{ steps.go_version.outputs.go_mod_version }}
+            - Updated CI to test with Go ${{ steps.go_version.outputs.stable }} and ${{ steps.go_version.outputs.oldstable }}
             - Ran go mod tidy to update dependencies
 
             🤖 Generated with [Claude Code](https://claude.com/claude-code)
 
             Co-Authored-By: Claude <noreply@anthropic.com>
-          branch: automated/go-version-${{ steps.go_version.outputs.version }}
+          branch: automated/go-version-${{ steps.go_version.outputs.stable }}
           delete-branch: true
-          title: 'chore: update Go to ${{ steps.go_version.outputs.version }}'
+          title: 'chore: update Go to ${{ steps.go_version.outputs.stable }} (stable) and ${{ steps.go_version.outputs.oldstable }} (oldstable)'
           body: |
             ## 🔄 Automated Go Version Update
 
-            This PR updates the Go version to the latest stable release.
+            This PR updates Go to the latest stable and oldstable releases.
 
             ### Changes
 
-            - **Previous version:** `${{ steps.current_version.outputs.version }}`
-            - **New version:** `${{ steps.go_version.outputs.version }}`
+            **go.mod:**
+            - **Previous:** `${{ steps.current_version.outputs.version }}`
+            - **New:** `${{ steps.go_version.outputs.go_mod_version }}`
+
+            **CI Testing Matrix:**
+            - **Stable:** `${{ steps.current_ci_versions.outputs.stable }}` → `${{ steps.go_version.outputs.stable }}`
+            - **Oldstable:** `${{ steps.current_ci_versions.outputs.oldstable }}` → `${{ steps.go_version.outputs.oldstable }}`
 
             ### What was updated
 
-            - ✅ `go.mod` - Updated go directive
+            - ✅ `go.mod` - Updated go directive to `${{ steps.go_version.outputs.go_mod_version }}`
             - ✅ `go.sum` - Regenerated with `go mod tidy`
+            - ✅ `.github/workflows/ci.yml` - Updated test matrix to use explicit versions
 
             ### Release Information
 
-            - **Full version:** `${{ steps.go_version.outputs.full_version }}`
-            - **Release notes:** https://go.dev/doc/devel/release#${{ steps.go_version.outputs.full_version }}
-            - **Download page:** https://go.dev/dl/#${{ steps.go_version.outputs.full_version }}
+            **Stable (${{ steps.go_version.outputs.stable }}):**
+            - **Release notes:** https://go.dev/doc/devel/release#${{ steps.go_version.outputs.stable_full }}
+            - **Download:** https://go.dev/dl/#${{ steps.go_version.outputs.stable_full }}
+
+            **Oldstable (${{ steps.go_version.outputs.oldstable }}):**
+            - **Release notes:** https://go.dev/doc/devel/release#${{ steps.go_version.outputs.oldstable_full }}
+            - **Download:** https://go.dev/dl/#${{ steps.go_version.outputs.oldstable_full }}
 
             ### Verification
 
@@ -187,14 +256,20 @@ jobs:
         run: |
           echo "## Go Version Update Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Current version:** ${{ steps.current_version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Latest version:** ${{ steps.go_version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "### go.mod" >> $GITHUB_STEP_SUMMARY
+          echo "- **Current:** ${{ steps.current_version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Latest:** ${{ steps.go_version.outputs.go_mod_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### CI Testing Matrix" >> $GITHUB_STEP_SUMMARY
+          echo "- **Stable:** ${{ steps.current_ci_versions.outputs.stable }} → ${{ steps.go_version.outputs.stable }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Oldstable:** ${{ steps.current_ci_versions.outputs.oldstable }} → ${{ steps.go_version.outputs.oldstable }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Update needed:** ${{ steps.compare.outputs.needs_update }}" >> $GITHUB_STEP_SUMMARY
 
           if [ "${{ steps.compare.outputs.needs_update }}" = "true" ]; then
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "✅ Pull request created to update Go to version ${{ steps.go_version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+            echo "✅ Pull request created to update Go versions" >> $GITHUB_STEP_SUMMARY
           else
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "✅ Go version is already up to date!" >> $GITHUB_STEP_SUMMARY
+            echo "✅ All Go versions are already up to date!" >> $GITHUB_STEP_SUMMARY
           fi
