--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
       fail-fast: false
       matrix:
         go-version: ['1.25.4', '1.24.10']  # Updated by go-version-update workflow
+        include:
+          - go-version: '1.25.4'
+            is-latest: true
+          - go-version: '1.24.10'
+            is-latest: false
     steps:
       - name: Checkout code
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
@@ -101,8 +106,23 @@ jobs:
         run: |
           goteststats -input test-results/junit.xml -output test-results/stats.json || true
 
+      - name: Install gosec
+        run: |
+          go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Run gosec security scan
+        run: |
+          mkdir -p security-results
+          gosec -fmt sarif -out security-results/gosec-${{ matrix.go-version }}.sarif ./... || true
+
+      - name: Upload gosec results to GitHub Security
+        uses: github/codeql-action/upload-sarif@ab2e54f42aa112ff08704159b88a57517f6f0ebb # v3
+        with:
+          sarif_file: security-results/gosec-${{ matrix.go-version }}.sarif
+          category: gosec-go-${{ matrix.go-version }}
+
       - name: Generate coverage HTML report
-        if: matrix.go-version == 'stable'
+        if: matrix.is-latest
         run: |
           go tool cover -html=coverage.out -o coverage.html
 
@@ -114,8 +134,16 @@ jobs:
           path: test-results/
           retention-days: 30
 
+      - name: Upload security results
+        if: always()
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v4.5.0
+        with:
+          name: security-results-${{ matrix.go-version }}
+          path: security-results/
+          retention-days: 30
+
       - name: Upload coverage report
-        if: matrix.go-version == 'stable'
+        if: matrix.is-latest
         uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v4.5.0
         with:
           name: coverage-report
@@ -200,29 +228,6 @@ jobs:
           name: binary-${{ matrix.goos }}-${{ matrix.goarch }}
           path: mikrotik-backup-*
           retention-days: 7
-
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
-
-      - name: Set up Go
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
-        with:
-          go-version-file: go.mod
-          cache: true
-
-      - name: Run Gosec Security Scanner
-        uses: securego/gosec@c8bc0c512102c4dbf1fde6f6a8f8b0cc1236a70c # v2.21.5
-        with:
-          args: '-no-fail -fmt sarif -out gosec-results.sarif ./...'
-
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@ab2e54f42aa112ff08704159b88a57517f6f0ebb # v3
-        with:
-          sarif_file: gosec-results.sarif
 
   dependency-review:
     name: Dependency Review
