--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,11 +35,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ['1.25.4', '1.24.10']  # Updated by go-version-update workflow
+        go-version: ["1.25.4", "1.24.10"] # Updated by go-version-update workflow
         include:
-          - go-version: '1.25.4'
+          - go-version: "1.25.4"
             is-latest: true
-          - go-version: '1.24.10'
+          - go-version: "1.24.10"
             is-latest: false
     steps:
       - name: Checkout code
@@ -91,8 +91,7 @@ jobs:
         run: |
           # Workaround for Go 1.25 covdata bug: https://github.com/golang/go/issues/75031
           # Explicitly set GOTOOLCHAIN to avoid auto-download toolchain issues
-          go_version=$(go version | awk '{print $3}' | sed 's/go//')
-          go env -w GOTOOLCHAIN=${go_version}+auto
+          go env -w GOTOOLCHAIN=1.25.0+auto
 
       - name: Run tests with gotestsum
         run: |
@@ -190,7 +189,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
         with:
-          fetch-depth: 0  # Full history for CodeQL PR diff analysis
+          fetch-depth: 0 # Full history for CodeQL PR diff analysis
 
       - name: Set up Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
