ci: correct github action permission for main script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
     name: Run CI
     uses: ./.github/workflows/ci.yml
     secrets: inherit
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
 
   tag:
     name: Auto-tag Release
@@ -102,3 +106,7 @@ jobs:
     needs: ci
     uses: ./.github/workflows/pages.yml
     secrets: inherit
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
