--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,7 +162,10 @@ jobs:
           cp coverage.html _site/
 
           # Generate coverage badge
-          coverage=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
+          coverage=$(go tool cover -func=coverage.out 2>/dev/null | grep total | awk '{print $3}' | sed 's/%//')
+          if [ -z "$coverage" ]; then
+            coverage="0.0"
+          fi
           color="red"
           if (( $(echo "$coverage >= 80" | bc -l) )); then
             color="green"
