--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,14 +31,14 @@ builds:
         goarch: arm
     ldflags:
       - -s -w
-      - -trimpath
     flags:
       - -trimpath
     mod_timestamp: '{{ .CommitTimestamp }}'
 
 archives:
   - id: default
-    format: tar.gz
+    formats:
+      - tar.gz
     name_template: >-
       {{ .ProjectName }}_
       {{- .Version }}_
@@ -49,7 +49,8 @@ archives:
       {{- if .Arm }}v{{ .Arm }}{{ end }}
     format_overrides:
       - goos: windows
-        format: zip
+        formats:
+          - zip
     files:
       - LICENSE
       - README.md
@@ -85,7 +86,7 @@ sboms:
       - '${artifact}.sbom.json'
 
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  version_template: "{{ incpatch .Version }}-next"
 
 changelog:
   sort: asc
