--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,38 +22,6 @@ jobs:
     uses: ./.github/workflows/ci.yml
     secrets: inherit
 
-  dependabot-automerge:
-    name: Dependabot Auto-merge
-    runs-on: ubuntu-latest
-    needs: ci
-    if: |
-      github.event_name == 'pull_request' &&
-      github.actor == 'dependabot[bot]'
-    permissions:
-      contents: write
-      pull-requests: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
-
-      - name: Check if PR is safe to merge
-        id: check_safe
-        run: |
-          # Check if it's a Go module or GitHub Actions update
-          pr_title="${{ github.event.pull_request.title }}"
-          if [[ "$pr_title" == *"go.mod"* ]] || [[ "$pr_title" == *"github/workflows"* ]]; then
-            echo "safe=true" >> $GITHUB_OUTPUT
-          else
-            echo "safe=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Enable auto-merge for Dependabot PRs
-        if: steps.check_safe.outputs.safe == 'true'
-        run: gh pr merge --auto --squash "$PR_URL"
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   claude-fix:
     name: Claude Auto-fix
     runs-on: ubuntu-latest
@@ -168,3 +136,17 @@ jobs:
               issue_number: context.issue.number,
               body: body
             });
+
+  dependabot:
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'mountain-reverie/mikrotik-configuration-backup'
+    steps:
+      - name: Dependabot metadata
+        id: dependabot-metadata
+        uses: dependabot/fetch-metadata@08eff52bf64351f401fb50d4972fa95b9f2c2d1b
+
+      - name: Enable auto-merge for Dependabot PRs
+        if: ${{ steps.dependabot-metadata.outputs.maintainer-changes && (steps.dependabot-metadata.outputs.package-ecosystem == 'go_modules' || steps.dependabot-metadata.outputs.package-ecosystem == 'github_actions') }}
+        run: gh pr merge --auto --merge "${{github.event.pull_request.html_url}}"
+        env:
+          GH_TOKEN: ${{secrets.DEPENDABOT_PAT}}
