--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,3 +101,31 @@ jobs:
     needs: ci
     uses: ./.github/workflows/pages.yml
     secrets: inherit
+
+  trigger-dependabot:
+    needs: ci
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Find first open Dependabot PR
+        id: find-pr
+        run: |
+          PR_NUMBER=$(gh pr list --author app/dependabot --state open --json number --jq '.[0].number // empty' --limit 1)
+          if [ "$PR_NUMBER" != "null" ] && [ -n "$PR_NUMBER" ]; then
+            echo "pr_number=$PR_NUMBER" >> "$GITHUB_OUTPUT"
+            echo "Found Dependabot PR #$PR_NUMBER"
+          else
+            echo "No open Dependabot PRs found"
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.DEPENDABOT_RECREATE_PAT }}
+          GH_REPO: ${{ github.repository }}
+
+      - name: Comment to trigger recreate
+        if: steps.find-pr.outputs.pr_number != ''
+        run: |
+          gh pr comment ${{ steps.find-pr.outputs.pr_number }} --body "@dependabot recreate"
+        env:
+          GH_TOKEN: ${{ secrets.DEPENDABOT_RECREATE_PAT }}
+          GH_REPO: ${{ github.repository }}
